1.4.2/keyboard-shortcuts.md
**Keyboard Shortcuts**
 
 - Up / Down Arrow Keys: when a sample row is highlighted, this changes the highlighted sample.
 - P : plays the currently highlighted sample in the list.
 - I : inverts the selected items in the list.
 - Escape : closes any open dialog windows and stops all sample playback.
 - Enter / Return : toggles the selection of the currently highlighted sample in the list.
 - L / S / R / D : changes the channel for stereo files being processed to mono.
 - Number keys 1 through 0 : play the selected sample in the position of the key with 0 == 10.
 - E: Opens the edit panel for the currently highlighted sample.
 - Holding Shift Key while dropping files: will randomly select files upto the currently set grid-size value.

**Shift + Click / Shift + Key**
 - Up / Down Keys : moves the highlighted sample up or down in the list.
 - P : plays the currently highlighted sample looped. 
 - Waveform View : plays the sample looped, click again to go back to one-shot.
 - Slice Grid Number & Off Buttons : changes the slice grid size, but keeps the selected samples in the list.
 - Duplicate Icon : puts the duplicated file at the end of the sample list.
 - Move Up Icon : moves directly to the top of the sample list.
 - Move Down Icon : moved directly to the end of the sample list.
 - L S R D Options : sets all stereo samples method for mono conversion (take left, right, or sum to mono).
 - Download All : processed files will have the imported folder structure flattened into their file names (all files will be at the root level of the zip file).
 - Joined / Joined Spaced : audio will be resampled internally back to the list instead of prompting to save as a file (clicking the filename in the list will still allow the wav download).
 - H : Toggles showing/hiding the top buttons panel, to give more space for the grid.
 - Slice Sample Options: Will put the slices in the list directly below the source sample. 
 - G : Toggles grid-view/list-view (grid-view is now the default for narrow screen width devices like phones).
 - Column Header : Sorts the list, but will keep the selected items grouped to the top of the list.
 - Reset Button : Randomizes the order of the list.
 - Check Sample Row Button : Will select all samples between the highlighted sample and the clicked sample (inclusive). Ctrl+Shift+Click will de-select.
 - E : Opens the editor panel for the currently highlighted sample, with the file name and path inputs editable, and the filename input keyboard focused.

**Ctrl + Click**
 - Slice Grid Number Buttons : prompts to enter a custom value for the slice grid.
 - Slice Grid Off Button : restores the default slice grid options.
 - Time Limit : prompts to enter a custom value for the timed chain lengths when that mode is enabled.
 - Row Slice Icon : Clear any related slice data.
 - Row Selected Header : Toggles select / de-select all samples in list.

**Alt + Key**
 - Number 1 - 0, P : Stops the playback and looping of the sample.
